src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Category_Number__c</fullName>
        <label>Category Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDIS_Portal_Name__c</fullName>
        <description>NDIS portal name</description>
        <label>NDIS Portal Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core Support</fullName>
                </value>
                <value>
                    <fullName>NDIS Support</fullName>
                </value>
                <value>
                    <fullName>Non NDIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>